tests/vertical-slice/reject/duplex_non_send.hew
// Reject fixture: E_DUPLEX_NON_SEND
// A lambda actor whose message type (or captured type) is not Send is rejected.
// Actor calls cross an actor boundary; all values crossing must be Send.
// Expected: type error containing "E_DUPLEX_NON_SEND"
fn main() {
    // Rc<i64> is not Send — using it as a parameter type on a lambda actor
    // is rejected at actor-definition time.
    let _worker = actor |msg: Rc<i64>| {
        println(msg.strong_count());
    };
}
